--- a/.github/workflows/sec-playwright.yml
+++ b/.github/workflows/sec-playwright.yml
@@ -7,17 +7,21 @@ jobs:
   smoke-test:
     runs-on: ubuntu-latest
 
-    services:
-      juice:
-        image: bkimminich/juice-shop:latest
-        ports:
-          - 3000:3000
-        options: >-
-          --health-cmd "curl -fsS http://localhost:3000 || exit 1"
-          --health-interval 5s --health-timeout 2s --health-retries 20
-
     steps:
       - uses: actions/checkout@v4
+
+      - name: Start Juice Shop container
+        run: |
+          docker pull bkimminich/juice-shop:latest
+          docker run -d --rm -p 3000:3000 --name juice bkimminich/juice-shop:latest
+
+      - name: Wait for Juice Shop
+        run: |
+          for i in {1..60}; do
+            if curl -sSf http://localhost:3000 >/dev/null; then echo "Juice Shop is up!"; break; fi
+            echo "Waiting for Juice Shop... ($i/60)"
+            sleep 2
+          done
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -29,13 +33,6 @@ jobs:
           npm init -y
           npm install @playwright/test
           npx playwright install --with-deps
-
-      - name: Wait for Juice Shop
-        run: |
-          for i in {1..30}; do
-            if curl -sSf http://localhost:3000 >/dev/null; then echo "Juice Shop is up!"; break; fi
-            sleep 2
-          done
 
       - name: Run Playwright script
         run: |
@@ -57,3 +54,7 @@ jobs:
         with:
           name: juice-shop-home
           path: home.png
+
+      - name: Stop container
+        if: always()
+        run: docker stop juice || true
